--- a/Buổi 5/baitap/bai4.css
+++ b/Buổi 5/baitap/bai4.css
@@ -1,11 +1,7 @@
 .p{
-    padding-bottom: 115%;
+    padding-bottom: 600px;
 }
 
 .p2{
     opacity: 0.5;
-}
-.img{
-    width: 20px;
-    height: 20px;
 }
