--- a/thu/thu.css
+++ b/thu/thu.css
@@ -1,80 +1,124 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    display: flex;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.all {
+    width: 100%;
+    height: 700px;
+    background-color: pink;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
-.slider {
-    width: 850px;
-    background: white;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.slider-image {
-    position: relative;
-}
-
-.slider-image img {
-    width: 100%;
-    display: block;
-    border-radius: 10px 10px 0 0;
-}
-
-.overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    color: white;
-    padding: 20px;
-}
-
-.tag {
-    background: #333;
-    color: white;
-    padding: 5px 10px;
-    font-size: 14px;
-    border-radius: 5px;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
-
-.headline {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-.description {
-    font-size: 14px;
-    margin-top: 5px;
-}
-
-.pagination {
-    display: flex;
+.all_div1 {
+    width: 50%;
+    height: 400px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 15px;
-    background: #fff;
+    text-align: center;
+    background-color: white;
 }
 
-.pagination button {
-    background: #ddd;
-    border: none;
-    padding: 8px 12px;
+.blue_1 {
+    margin: 10px;
+    height: 100px;
+    /* width: 100%; */
+    padding: 5px;
+    background-color: blue;
+}
+
+.color_2 {
+    height: 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: zsss;
+}
+
+.color_2 .color_rep {
+    width: 50%;
     margin: 5px;
-    cursor: pointer;
-    border-radius: 5px;
+    padding: 5px;
+    background-color: rgb(255, 0, 0);
 }
 
-.pagination .active {
-    background: black;
-    color: white;
+.color_2 .color_yello {
+    padding: 5px;
+    width: 50%;
+    margin: 5px;
+    background-color: yellow;
+}
+
+.blue_2 {
+    margin: 5px;
+    height: 100px;
+    width: 100%;
+    padding: 5px;
+    background-color: blue;
+}
+
+.color_3 {
+    width: 100%;
+    height: 150px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.color_3 .blue {
+    width: 30%;
+    padding: 5px;
+    background-color: aqua;
+}
+
+.color_3 .pick {
+    width: 30%;
+    padding: 5px;
+    background-color: rgb(94, 20, 32);
+}
+
+.color_3 .yello {
+    width: 30%;
+    padding: 5px;
+    background-color: yellow;
+}
+
+@media screen and (max-width:1024px) {
+
+    .color_3 {
+        height: 150px;
+        width: 100%;
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .color_3 .blue {
+        width: 100%;
+        height: 50px;
+        padding: 5px;
+        background-color: aqua;
+    }
+
+    .color_3 .pick {
+        width: 100%;
+        height: 50px;
+        padding: 5px;
+        background-color: rgb(94, 20, 32);
+    }
+
+    .color_3 .yello {
+        width: 100%;
+        height: 50px;
+        padding: 5px;
+        background-color: yellow;
+    }
+
+    .all_div1 {
+        width: 100%;
+        height: 100%;
+    }
 }
