--- a/buoi12/bai1.css
+++ b/buoi12/bai1.css
@@ -1,3 +1,9 @@
 .form-select{
     background-color: tomato    ;
+    background-color: lightblue;
+}
+
+select:focus {
+    background-color: lightblue;
+    /* Màu nền của select khi focus */
 }
