--- a/thu/thu.css
+++ b/thu/thu.css
@@ -3,122 +3,517 @@
     padding: 0;
 }
 
-.all {
-    width: 100%;
-    height: 700px;
-    background-color: pink;
-    justify-content: center;
-    align-items: center;
+.opa {
+    opacity: 0.6;
 }
 
-.all_div1 {
-    width: 50%;
-    height: 400px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: white;
+.top_header {
+    width: 1440px;
+    height: 48px;
+    background-color: #000000;
 }
 
-.blue_1 {
-    margin: 10px;
-    height: 100px;
-    /* width: 100%; */
-    padding: 5px;
-    background-color: blue;
-}
-
-.color_2 {
-    height: 200px;
-    width: 100%;
-    display: flex;
-    flex-direction: zsss;
-}
-
-.color_2 .color_rep {
-    width: 50%;
-    margin: 5px;
-    padding: 5px;
-    background-color: rgb(255, 0, 0);
-}
-
-.color_2 .color_yello {
-    padding: 5px;
-    width: 50%;
-    margin: 5px;
-    background-color: yellow;
-}
-
-.blue_2 {
-    margin: 5px;
-    height: 100px;
-    width: 100%;
-    padding: 5px;
-    background-color: blue;
-}
-
-.color_3 {
-    width: 100%;
-    height: 150px;
-    margin-top: 20px;
+.top_header .frame_746 {
+    width: 859px;
+    height: 24px;
+    position: relative;
+    top: 12px;
+    background-color: rgba(0, 255, 255, 0);
+    left: 445px;
     display: flex;
     justify-content: space-between;
 }
 
-.color_3 .blue {
-    width: 30%;
-    padding: 5px;
-    background-color: aqua;
+.frame_746 .frame_555 {
+    width: 550px;
+    background-color: rgba(47, 124, 98, 0)
 }
 
-.color_3 .pick {
-    width: 30%;
-    padding: 5px;
-    background-color: rgb(94, 20, 32);
+.frame_555 .text_1 {
+    font-size: 14px;
+    color: #FAFAFA;
 }
 
-.color_3 .yello {
-    width: 30%;
-    padding: 5px;
-    background-color: yellow;
+.frame_555 .text_2 {
+    font-size: 14px;
+    text-decoration: underline;
+    text-decoration-style: solid;
+    color: #FAFAFA;
 }
 
-@media screen and (max-width:1024px) {
+.frame_746 .frame_549 {
+    width: 78px;
+    height: 24px;
+}
 
-    .color_3 {
-        height: 150px;
-        width: 100%;
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: 20px;
-    }
+.frame_549 .text_3 {
+    font-size: 14px;
+    color: white;
+}
 
-    .color_3 .blue {
-        width: 100%;
-        height: 50px;
-        padding: 5px;
-        background-color: aqua;
-    }
+.DropDown {
+    color: #FAFAFA;
+}
 
-    .color_3 .pick {
-        width: 100%;
-        height: 50px;
-        padding: 5px;
-        background-color: rgb(94, 20, 32);
-    }
+.header {
+    width: 1170px;
+    height: 38px;
+    position: relative;
+    top: 88px;
+    left: 135px;
+    background-color: rgba(0, 255, 255, 0);
+    display: flex;
+    justify-content: space-between;
+}
 
-    .color_3 .yello {
-        width: 100%;
-        height: 50px;
-        padding: 5px;
-        background-color: yellow;
-    }
+.header .frame_556 {
+    width: 645px;
+    height: 100%;
+    background-color: rgba(250, 235, 215, 0);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    .all_div1 {
-        width: 100%;
-        height: 100%;
-    }
+.frame_556 .logo {
+    width: 118px;
+    background-color: rgba(245, 245, 220, 0);
+}
+
+.logo .text_4 {
+    font-weight: 700;
+    font-size: 24px;
+
+}
+
+.frame_556 .frame_554 {
+    width: 367px;
+    display: flex;
+    background-color: rgba(0, 0, 255, 0);
+}
+
+a {
+    text-decoration-line: none;
+}
+
+.frame_554 .home {
+    flex: 1;
+    font-size: 16px;
+    text-align: center;
+    color: #000000;
+}
+
+.header .frame_552 {
+    width: 395px;
+    background-color: rgba(95, 158, 160, 0);
+    display: flex;
+    justify-content: space-between;
+}
+
+.frame_552 .search_component_set {
+    width: 243px;
+    border-radius: 4px;
+    padding-top: 7px;
+    padding-right: 12px;
+    padding-bottom: 7px;
+    padding-left: 20px;
+    background-color: #F5F5F5;
+}
+
+.search_component_set .frame_550 {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(210, 105, 30, 0);
+}
+
+.frame_552 .frame_551 {
+    width: 100px;
+    display: flex;
+    align-items: center;
+    background-color: rgba(255, 228, 196, 0);
+}
+
+.frame_551 .frame_551_icon {
+    flex: 1;
+}
+
+.line_3 {
+    position: relative;
+    width: 1440px;
+    height: 1px;
+    top: 142px;
+    background-color: #000000;
+}
+
+.main .road_map {
+    width: 155px;
+    height: 21px;
+    position: relative;
+    background-color: rgba(127, 255, 212, 0);
+    top: 222px;
+    left: 135px;
+}
+
+.road_map .account {
+    opacity: 0.5;
+}
+
+.road_map .line_13 {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.main .welcome_text {
+    width: 139px;
+    height: 21px;
+    position: relative;
+    top: 222px;
+    left: 1166px;
+}
+
+.welcome_text .md_color {
+    color: rgb(224, 95, 95);
+}
+
+.main .manage_my_account {
+    position: relative;
+    top: 323px;
+    left: 135px;
+    color: #000000;
+    font-size: 16px;
+}
+
+.main .frame_839 {
+    width: 165px;
+    height: 88px;
+    position: relative;
+    top: 363px;
+    left: 170px;
+}
+
+.frame_839 .text_5 {
+    color: #DB4444;
+}
+
+.frame_839 .text_6 {
+    margin-top: 10px;
+    opacity: 50%;
+}
+
+.frame_839 .text_7 {
+    margin-top: 10px;
+    opacity: 50%;
+}
+
+.main .my_orders {
+    position: relative;
+    top: 475px;
+    left: 135px;
+    color: #000000;
+}
+
+.main .frame_840 {
+    position: relative;
+    width: 138px;
+    height: 56px;
+    top: 515px;
+    left: 170px;
+}
+
+.frame_840 .text_8 {
+    margin-top: 10px;
+    opacity: 50%;
+}
+
+.frame_840 .text_9 {
+    margin-top: 10px;
+    opacity: 50%;
+}
+
+.main .my_wishlist {
+    position: relative;
+    top: 587px;
+    left: 135px;
+    color: #000000;
+}
+
+.main .frame_838 {
+    box-shadow: 0px 1px 13px 0px #0000000D;
+    width: 870px;
+    height: 630px;
+    position: relative;
+    top: 120px;
+    left: 435px;
+    border-radius: 4px;
+}
+
+.frame_838 .edit_your_profile {
+    position: absolute;
+    top: 40px;
+    left: 80px;
+    color: #DB4444;
+    font-size: 20px;
+}
+
+.frame_838 .frame_848 {
+    position: absolute;
+    background-color: rgba(255, 228, 196, 0);
+    width: 710px;
+    height: 82px;
+    top: 84px;
+    left: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.frame_841 {
+    width: 330px;
+    height: 100%;
+}
+
+.frame_841 .input_1 {
+    margin-top: 10px;
+    width: 330px;
+    height: 50px;
+    border-radius: 4px;
+    background-color: #F5F5F5;
+    border: none;
+    padding-left: 10px;
+}
+
+.frame_838 .frame_849 {
+    position: absolute;
+    background-color: rgba(255, 228, 196, 0);
+    width: 710px;
+    height: 82px;
+    top: 190px;
+    left: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.frame_838 .frame_846 {
+    width: 710px;
+    height: 214px;
+    position: absolute;
+    background-color: #db444400;
+    top: 296px;
+    left: 80px;
+}
+
+.input_2 {
+    margin-top: 10px;
+    width: 100%;
+    height: 50px;
+    border-radius: 4px;
+    background-color: #F5F5F5;
+    border: none;
+    padding-left: 10px;
+}
+
+.frame_838 .frame_847 {
+    width: 303px;
+    height: 56px;
+    position: absolute;
+    background-color: #db444400;
+    top: 534px;
+    left: 487px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.frame_847 .frame_847_button {
+    width: 214px;
+    height: 56px;
+    border-radius: 4px;
+    background-color: #DB4444;
+    color: #ffffff;
+    border: none;
+}
+
+.footer {
+    width: 1440px;
+    height: 440px;
+    background-color: #000000;
+    position: relative;
+    top: 300px;
+}
+
+.footer .frame_743 {
+    width: 1170px;
+    height: 236px;
+    position: absolute;
+    background-color: rgba(33, 140, 140, 0);
+    top: 80px;
+    left: 135px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.frame_743 .frame_717 {
+    width: 217px;
+    height: 100%;
+    background-color: rgba(222, 184, 135, 0);
+}
+
+.frame_717_Exclusive {
+    font-size: 24px;
+    color: #FAFAFA;
+}
+
+.frame_717_Subscribe {
+    margin-top: 20px;
+    font-size: 20px;
+    color: #FAFAFA;
+}
+
+.frame_717_Gift {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #FAFAFA;
+}
+
+.frame_717 .send_mail {
+    margin-top: 10px;
+    height: 48px;
+    background-color: rgba(255, 255, 255, 0);
+    display: flex;
+    border: 1.5px solid #FAFAFA;
+    border-radius: 4px;
+}
+
+.send_mail_img {
+    width: 20%;
+}
+
+.frame_717_Gift_input {
+    width: 80%;
+    margin-left: 10px;
+    border: none;
+    background-color: #fafafa00;
+}
+
+.frame_743 .frame_713 {
+    width: 175px;
+    height: 100%;
+    background-color: #db444400;
+}
+
+.frame_713_name {
+    color: #FAFAFA;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.frame_713_text {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #FAFAFA;
+}
+
+.frame_743 .frame_711 {
+    width: 123px;
+    height: 100%;
+    background-color: #db444400;
+}
+
+.frame_711_name {
+    color: #FAFAFA;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.frame_711_text {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #FAFAFA;
+}
+
+.frame_743 .frame_709 {
+    width: 109px;
+    height: 100%;
+    background-color: #db444400;
+}
+
+.frame_709_name {
+    color: #FAFAFA;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.frame_709_text {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #FAFAFA;
+}
+
+.frame_743 .frame_742 {
+    width: 198px;
+    height: 100%;
+}
+
+.frame_742 .text {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #FAFAFA;
+}
+
+.frame_742 .save {
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #FAFAFA;
+}
+
+.frame_742 .frame_719 {
+    width: 100%;
+    height: 84px;
+    display: flex;
+}
+
+.frame_719 .qr {
+    height: 80px;
+    width: 80px;
+}
+
+.frame_719 .frame_718 {
+    width: 110px;
+    height: 84px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.frame_718 .item {
+    width: 110px;
+    height: 40px;
+}
+
+.frame_742 .frame_741 {
+    width: 168px;
+    height: 24px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.frame_741 .item {
+    width: 24px;
+    height: 100%;
+}
+
+.footer .frame_643 {
+    width: 1440px;
+    height: 40px;
+    position: absolute;
+    background-color: #db444400;
+    top: 376px;
+    opacity: 0.4;
+    text-align: center;
+}
+
+.frame_643 .frame_67 {
+    margin-top: 20px;
+    opacity: 0.6;
+    color: #FAFAFA;
 }
