--- a/diary/css/home.css
+++ b/diary/css/home.css
@@ -67,12 +67,9 @@
 }
 
 #button_sign_up {
-  width: 88px;
+  width: 100px;
   height: 40px;
-  position: absolute;
   display: flex;
-  top: 16px;
-  left: 1661px;
   border-width: 1px;
   border-radius: 6px;
   gap: 10px;
@@ -91,12 +88,9 @@
 }
 
 #button_sign_in {
-  width: 77px;
+  width: 100px;
   height: 40px;
-  position: absolute;
   display: flex;
-  top: 16px;
-  left: 1759px;
   border-width: 1px;
   border-radius: 6px;
   gap: 10px;
@@ -457,508 +451,75 @@
   gap: 32px;
 }
 
-#post_01 {
-  width: 384px;
-  height: 468px;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-#post_01 img {
-  width: 384px;
-  height: 240px;
-}
-
-#post_01 div {
-  width: 384px;
-  height: 196px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-#post_01 div .date {
-  width: 384px;
-  height: 20px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  color: #6941c6;
-}
-
-#post_01 div div {
-  width: 384px;
-  height: 32px;
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-#post_01 div div span {
-  width: 344px;
-  height: 32px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  color: #101828;
-}
-
-#post_01 div div i {
-  width: 24px;
-  height: 28px;
-  position: relative;
-  padding-top: 4px;
-}
-
-#post_01 p {
-  width: 384px;
-  height: 72px;
-  font-family: Inter;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #667085;
-}
-
-#post_01 div .category {
-  width: 384px;
-  height: 24px;
-  display: flex;
-  gap: 8px;
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #6941c6;
-}
-
-#post_02 {
-  width: 384px;
-  height: 468px;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-#post_02 img {
-  width: 384px;
-  height: 240px;
-}
-
-#post_02 div {
-  width: 384px;
-  height: 196px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-#post_02 div .date {
-  width: 384px;
-  height: 20px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  color: #6941c6;
-}
-
-#post_02 div div {
-  width: 384px;
-  height: 32px;
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-#post_02 div div span {
-  width: 344px;
-  height: 32px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  color: #101828;
-}
-
-#post_02 div div i {
-  width: 24px;
-  height: 28px;
-  position: relative;
-  padding-top: 4px;
-}
-
-#post_02 p {
-  width: 384px;
-  height: 72px;
-  font-family: Inter;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #667085;
-}
-
-#post_02 div .category {
-  width: 384px;
-  height: 24px;
-  display: flex;
-  gap: 8px;
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #6941c6;
-}
-
-#post_03 {
-  width: 384px;
-  height: 468px;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-#post_03 img {
-  width: 384px;
-  height: 240px;
-}
-
-#post_03 div {
-  width: 384px;
-  height: 196px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-#post_03 div .date {
-  width: 384px;
-  height: 20px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  color: #6941c6;
-}
-
-#post_03 div div {
-  width: 384px;
-  height: 32px;
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-#post_03 div div span {
-  width: 344px;
-  height: 32px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  color: #101828;
-}
-
-#post_03 div div i {
-  width: 24px;
-  height: 28px;
-  position: relative;
-  padding-top: 4px;
-}
-
-#post_03 p {
-  width: 384px;
-  height: 72px;
-  font-family: Inter;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #667085;
-}
-
-#post_03 div .category {
-  width: 384px;
-  height: 24px;
-  display: flex;
-  gap: 8px;
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #6941c6;
-}
-
 #line_two {
   width: 1216px;
   height: 468px;
   display: flex;
   gap: 32px;
 }
-
-#post_04 {
+.post_card_column {
   width: 384px;
-  height: 468px;
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
 
-#post_04 img {
+.post_card_column img {
   width: 384px;
   height: 240px;
+  object-fit: cover;
 }
 
-#post_04 div {
-  width: 384px;
-  height: 196px;
+.post_card_column .card_content {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 
-#post_04 div .date {
-  width: 384px;
-  height: 20px;
+.post_card_column .date {
   font-family: Inter;
   font-weight: 600;
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: 0%;
   color: #6941c6;
 }
 
-#post_04 div div {
-  width: 384px;
-  height: 32px;
+.post_card_column .title_row {
   display: flex;
   flex-direction: row;
   gap: 16px;
+  align-items: center;
 }
 
-#post_04 div div span {
-  width: 344px;
-  height: 32px;
+.post_card_column .title_row span {
   font-family: Inter;
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
-  letter-spacing: 0%;
   color: #101828;
 }
 
-#post_04 div div i {
+.post_card_column .title_row i {
   width: 24px;
   height: 28px;
-  position: relative;
   padding-top: 4px;
 }
 
-#post_04 p {
-  width: 384px;
-  height: 72px;
+.post_card_column p {
   font-family: Inter;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 0%;
   color: #667085;
 }
 
-#post_04 div .category {
-  width: 384px;
-  height: 24px;
+.post_card_column .category {
   display: flex;
   gap: 8px;
   font-family: Inter;
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #6941c6;
-}
-
-#post_05 {
-  width: 384px;
-  height: 468px;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-#post_05 img {
-  width: 384px;
-  height: 240px;
-}
-
-#post_05 div {
-  width: 384px;
-  height: 196px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-#post_05 div .date {
-  width: 384px;
-  height: 20px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  color: #6941c6;
-}
-
-#post_05 div div {
-  width: 384px;
-  height: 32px;
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-#post_05 div div span {
-  width: 344px;
-  height: 32px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  color: #101828;
-}
-
-#post_05 div div i {
-  width: 24px;
-  height: 28px;
-  position: relative;
-  padding-top: 4px;
-}
-
-#post_05 p {
-  width: 384px;
-  height: 72px;
-  font-family: Inter;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #667085;
-}
-
-#post_05 div .category {
-  width: 384px;
-  height: 24px;
-  display: flex;
-  gap: 8px;
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
-  color: #6941c6;
-}
-
-#post_06 {
-  width: 384px;
-  height: 468px;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-#post_06 img {
-  width: 384px;
-  height: 240px;
-}
-
-#post_06 div {
-  width: 384px;
-  height: 196px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-#post_06 div .date {
-  width: 384px;
-  height: 20px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  color: #6941c6;
-}
-
-#post_06 div div {
-  width: 384px;
-  height: 32px;
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-#post_06 div div span {
-  width: 344px;
-  height: 32px;
-  font-family: Inter;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  color: #101828;
-}
-
-#post_06 div div i {
-  width: 24px;
-  height: 28px;
-  position: relative;
-  padding-top: 4px;
-}
-
-#post_06 p {
-  width: 384px;
-  height: 72px;
-  font-family: Inter;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #667085;
-}
-
-#post_06 div .category {
-  width: 384px;
-  height: 24px;
-  display: flex;
-  gap: 8px;
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
   color: #6941c6;
 }
 
@@ -1185,4 +746,149 @@
   font-size: xx-large;
   color: red;
   transform: rotate3d(360deg);
+}
+
+#user_status_container {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  top: 16px;
+  left: 1844px;
+  display: flex;
+  gap: 20px;
+}
+
+#user_status_container img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+#user_status_container #button_regist {
+  width: 88px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background: #ffffff;
+  color: #252c32;
+  border: 1px solid #dde2e4;
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: -0.6%;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#user_status_container #button_login {
+  width: 88px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background: #ffffff;
+  color: #252c32;
+  border: 1px solid #dde2e4;
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: -0.6%;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#user_status_container a {
+  text-decoration: none;
+}
+#user_dropdown_menu {
+  position: absolute;
+  top: 72px;
+  right: 24px;
+  background-color: white;
+  border: 1px solid #f2f4f7;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px -2px rgba(16, 24, 40, 0.08),
+    0px 12px 16px -4px rgba(16, 24, 40, 0.14);
+  width: 240px;
+  height: auto;
+  padding: 16px;
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 1000;
+}
+
+#profile_section {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 12px;
+}
+
+#profile_section img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+#profile_name_email {
+  display: flex;
+  flex-direction: column;
+}
+
+#profile_name {
+  font-weight: 600;
+  font-size: 14px;
+}
+
+#profile_email {
+  font-size: 12px;
+  color: #667085;
+}
+
+.post_card {
+  display: flex;
+  background-color: #fff;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  transition: transform 0.2s ease;
+  cursor: pointer;
+  min-width: 300px;
+  max-width: 32%;
+}
+
+.post_card:hover {
+  transform: translateY(-4px);
+}
+
+.post_card img {
+  width: 40%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.post_card div {
+  padding: 16px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.profile_option {
+  display: block;
+  margin: 5px 0;
+  cursor: pointer;
+  color: #007bff;
+}
+
+.profile_option:hover {
+  text-decoration: underline;
 }
